Закончить эдпоинты по работе с друзьями